--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,21 @@
-argcomplete==1.9.4
-atomicwrites==1.1.5
-attrs==18.1.0
-certifi==2018.4.16
+argcomplete==1.10.0
+atomicwrites==1.3.0
+attrs==19.1.0
+certifi==2019.6.16
 chardet==3.0.4
-docker==3.4.1
-docker-pycreds==0.3.0
+docker==4.0.2
 dockerpty==0.4.1
-idna==2.7
-mock==2.0.0
-more-itertools==4.2.0
-pbr==4.1.0
-pkginfo==1.4.1
-pluggy==0.6.0
-py==1.5.4
-pytest==3.6.3
-pytest-mock==1.10.0
-requests==2.19.1
-requests-toolbelt==0.8.0
-six==1.11.0
-tqdm==4.19.5
-twine==1.9.1
-urllib3==1.23
-websocket-client==0.48.0
+idna==2.8
+importlib-metadata==0.18
+more-itertools==7.1.0
+packaging==19.0
+pluggy==0.12.0
+py==1.8.0
+pyparsing==2.4.0
+pytest==5.0.0
+requests==2.22.0
+six==1.12.0
+urllib3==1.25.3
+wcwidth==0.1.7
+websocket-client==0.56.0
+zipp==0.5.1
